Only $slice outer arrays when nested. SERVER-1085